Refactored and replaced instances of optional (can still return null)